--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@keyframes flipRightAnimation {
+    from {
+      transform: perspective(400px) rotateY(0);
+    }
+    to {
+      transform: perspective(400px) rotateY(-180deg);
+    }
+  }
+  
+  .flip-right-animation {
+    animation: flipRightAnimation 5s infinite;
+    transform-style: preserve-3d;
+  }
